refactor: add icon store; refactor `use`s
